src/objects/ADvendio__Area_Classification__c.object
<CustomObject>
    <description>Group a range of postal codes and set a name for this group.</description>
    <fields>
        <fullName>ADvendio__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__postalcode_from__c</fullName>
        <label>ZIP Code from</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__postalcode_to__c</fullName>
        <label>ZIP Code up to</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Area Classification</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Area Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>